KSCM-2069: Adjustments for Header alignment issues for: tab, logo and define course sections .
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69105 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -645,7 +645,15 @@ section.uif-disclosure .uif-headerText .uif-headerText-span [class*='icon-caret-
 
 /* styling for supportTitle with header KSCM-2069 */
 #KS-CourseView-Header{
+    padding-left: 4px;
+}
+
+.cm-StickyHeader-links{
     padding-left: 6px;
+}
+
+.course_tabs_header_text {
+   padding-left: 6px;
 }
 
 #review_proposal_ReviewErrorMessageActionLink {
